client/src/CSS/About.css
@media only screen and (min-width: 1101px) {

    .about-wrapper {
        height: auto;
        background-color: white;
        font-size: 125%;

    }

    .about-information {

        padding: 1%;
        background-color: teal;
    }

    .about-rodi-media {

        padding: 1%;
    }

    .about-link {
        background-color: teal;
        padding: 1%;
    }

    .about-link a {
        text-decoration: none;
        color: black;
        font-size: 125%;
    }

    .about-tennis-information {
        background-color: white;

        padding: 1%;




    }

    .about-tennis-daan-picture img {
        width: 201px;

        float: left;
        position: relative;
        margin-right: 2%;

    }



    .about-tennis-text {

        clear: both;
        display: block;
    }

    .about-soccer-text img {
        width: 365px;
        float: right;
        position: relative;
        padding: 0% 2% 2% 2%;

    }



    .about-soccer {
        padding: 1%;
    }

    .about-soccer-text {
        /* display: flex; */
        margin-bottom: 2%;
    }



    .about-book {
        padding: 2%;
        padding-top: 0%;
    }

    .about-book a {
        text-decoration: none;
    }

    .about-book-wrapper {
        padding: 1%;
    }


    .about-book-flexer {
        display: flex;



    }

    .about-book-cover-and-bookpresentation {
        width: 150%;

        padding: 5%;
        padding-top: 0%;
        padding-left: 1%;
    }

    .about-book-front img {
        width: 100%;
        height: 100%;

        border-style: solid;
        border-width: 1px;
        border-color: blue;
    }




    .about-book-flip-box {
        background-color: transparent;
        width: 100%;
        height: 450px;
        border: 1px solid #f1f1f1;
        perspective: 1000px;

    }



    .about-book-flip-box-inner {
        position: relative;
        width: 100%;
        height: 100%;
        text-align: center;
        transition: transform 0.8s;
        transform-style: preserve-3d;
    }

    .about-book-flip-box:hover .about-book-flip-box-inner {
        transform: rotateY(180deg);
    }

    .about-book-flip-box-front,
    .about-book-flip-box-back {
        position: absolute;
        padding: 2%;
        width: 100%;
        height: 100%;
        -webkit-backface-visibility: hidden;
        backface-visibility: hidden;
        text-align: left;
    }



    .about-book-flip-box-front {

        color: black;
    }

    .about-book-flip-box-back {

        color: white;
        transform: rotateY(180deg);
    }

    .about-book-more-info {


        color: maroon;
        padding: 5%;
        margin-left: 3%;
        margin-top: 2%;
        background-color: #FFD9B2;
        border-radius: 10%;
        font-size: 90%;

    }

    .about-book-more-info a {
        text-decoration: none;
    }
}

@media only screen and (min-width: 768px) and (max-width: 1100px) {

    .about-wrapper {
        height: auto;
        background-color: white;
        font-size: 125%;

    }

    .about-information {

        padding: 1%;
        background-color: teal;
    }

    .about-rodi-media {

        padding: 1%;
    }

    .about-link {
        background-color: teal;
        padding: 1%;
    }

    .about-link a {
        text-decoration: none;
        color: black;
        font-size: 125%;
    }

    .about-tennis-information {
        background-color: white;

        padding: 1%;




    }

    .about-tennis-daan-picture img {
        width: 18%;

        float: left;
        position: relative;
        margin-right: 2%;

    }



    .about-tennis-text {

        display: block;
    }


    .about-soccer-information {
        padding: 1%;
    }

    .about-soccer-information img {
        position: relative;
        float: right;
        width: 60%;
        padding-top: 5%;
    }


    .about-soccer-picture {
        width: 20%;
    }


    .about-book {
        padding: 2%;
        padding-top: 10%;


    }

    .about-book a {
        text-decoration: none;
    }

    .about-book-wrapper {
        padding: 1%;
    }


    .about-book-cover-and-bookpresentation {
        width: 100%;

        padding: 0%;
        padding-top: 0%;
        padding-left: 0%;
    }

    .about-book-front img {
        position: relative;
        float: left;
        margin-left: 24%;
        width: 50%;
        height: 100%;

        border-style: solid;

        border-width: 1px;
        border-color: blue;
    }




    .about-book-flip-box {
        background-color: transparent;
        width: 100%;
        height: 450px;
        border: 1px solid #f1f1f1;
        perspective: 1000px;

    }



    .about-book-flip-box-inner {
        position: relative;
        width: 100%;
        height: 100%;
        text-align: center;
        transition: transform 0.8s;
        transform-style: preserve-3d;
    }

    .about-book-flip-box:hover .about-book-flip-box-inner {
        transform: rotateY(180deg);
    }

    .about-book-flip-box-front,
    .about-book-flip-box-back {
        position: absolute;
        padding: 2%;
        width: 100%;
        height: 100%;
        -webkit-backface-visibility: hidden;
        backface-visibility: hidden;
        text-align: left;
    }



    .about-book-flip-box-front {

        color: black;
    }

    .about-book-flip-box-back {

        color: white;
        transform: rotateY(180deg);
    }

    .about-book-more-info {


        color: maroon;
        padding: 5%;
        margin-left: 3%;
        margin-top: 2%;
        background-color: #FFD9B2;
        border-radius: 10%;
        font-size: 90%;

    }

    .about-book-more-info a {
        text-decoration: none;
    }
}


@media only screen and (max-width: 767px) {

    .about-wrapper {
        height: auto;
        background-color: white;
        font-size: 100%;

    }

    .about-information {

        padding: 1%;
        background-color: teal;
    }

    .about-rodi-media {

        padding: 1%;
    }

    .about-link {
        background-color: teal;
        padding: 1%;
    }

    .about-link a {
        text-decoration: none;
        color: black;
        font-size: 100%;
    }

    .about-tennis-information {
        background-color: white;

        padding: 1%;




    }

    .about-tennis-daan-picture img {
        width: 33%;
        border-radius: 10%;
        float: left;
        position: relative;
        margin-right: 2%;

    }



    .about-tennis-text {

        display: block;
    }

    .about-soccer-flexer img {
        width: 40%;
    }

    .about-soccer-information img {
        position: relative;
        float: right;
        width: 60%;
        padding-top: 5%;
        padding-right: 2%;
    }



    .about-soccer {
        padding: 1%;
    }

    .about-soccer-flexer img {

        width: 100%;
    }

    .about-soccer-picture {
        width: 20%;
    }


    .about-book {
        padding: 2%;
        padding-top: 0%;
    }

    .about-book a {
        text-decoration: none;
    }

    .about-book-wrapper {
        padding: 1%;
    }


    /* .about-book-flexer {
        display: flex;



    } */

    .about-book-cover-and-bookpresentation {
        width: 52%;
        margin-left: 24%;
        padding-top: 0%;
        padding-bottom: 5%;
    }

    .about-book-front img {
        width: 100%;
        height: 100%;

        border-style: solid;
        border-width: 1px;
        border-color: blue;
        /* position: relative;
        float: right; */

    }




    .about-book-flip-box {
        background-color: transparent;
        width: 100%;
        height: 250px;
        border: 1px solid #f1f1f1;
        perspective: 1000px;

    }



    .about-book-flip-box-inner {
        position: relative;
        width: 100%;
        height: 100%;
        text-align: center;
        transition: transform 0.8s;
        transform-style: preserve-3d;
    }

    .about-book-flip-box:hover .about-book-flip-box-inner {
        transform: rotateY(180deg);
    }

    .about-book-flip-box-front,
    .about-book-flip-box-back {
        position: absolute;
        /* padding: 2%; */
        width: 100%;
        height: 100%;
        -webkit-backface-visibility: hidden;
        backface-visibility: hidden;
        text-align: left;
    }



    .about-book-flip-box-front {

        color: black;
    }

    .about-book-flip-box-back {

        color: white;
        transform: rotateY(180deg);
    }

    .about-book-more-info {


        color: maroon;
        padding: 5%;
        margin-left: 3%;
        margin-top: 2%;
        background-color: #FFD9B2;
        border-radius: 10%;
        font-size: 90%;

    }

    .about-book-more-info a {
        text-decoration: none;
    }
}

